# Balancing-The-Flow

./: .gitignore  README.md
Scripts/: README.md  Untitled.ipynb  add_model.sh  all_uid_metrics.csv  analyze_uid.py  articles.json  commands.md  compare_uid.py  convert_lora_to_gguf.py  dataset_test.ipynb  main.py  prompter.py  pyproject.toml  scraper.py  surprisal_calculator.py  test.ipynb  uid_analysis.ipynb  uid_test.ipynb  utils.py
Scripts/.ipynb_checkpoints/: test-checkpoint.ipynb  uid_analysis-checkpoint.ipynb
Scripts/analysis_csvs/: all_uid_metrics.csv  subsample_by_dataset.csv  subsample_by_model.csv
Sources/: human_1.txt  human_10.txt  (+1833 more)
refactor/: README.md  changelog.md  current.txt  log.py  main.py  pyproject.toml
refactor/changelog/: README.md  changelog.txt  current.txt
refactor/notebooks/: llama_finetune_default.ipynb  lora.ipynb
refactor/notebooks/.ipynb_checkpoints/: lora-checkpoint.ipynb
refactor/templates/: changelog_convention.txt
refactor/utils/: README.md  lora.py  merge.py  sample_script.py
revised-scripts/: examples.ipynb  main.py  pyproject.toml
revised-scripts/.ipynb_checkpoints/: examples-checkpoint.ipynb
revised-scripts/datasets_cache/abisee_cnn_dailymail_test/: metadata.json
revised-scripts/outputs/llama-2-7b/article/: cnn_dailymail_article_2.csv  cnn_dailymail_article_3.csv  cnn_dailymail_article_5.csv
revised-scripts/outputs/surprisals/gpt2/: llama-2-7b-chat@q8_0_0_surprisals.csv  llama-2-7b-chat@q8_0_100_surprisals.csv  llama-2-7b-chat@q8_0_101_surprisals.csv  llama-2-7b-chat@q8_0_102_surprisals.csv  llama-2-7b-chat@q8_0_103_surprisals.csv  llama-2-7b-chat@q8_0_104_surprisals.csv  llama-2-7b-chat@q8_0_105_surprisals.csv  llama-2-7b-chat@q8_0_106_surprisals.csv  llama-2-7b-chat@q8_0_107_surprisals.csv  llama-2-7b-chat@q8_0_108_surprisals.csv  llama-2-7b-chat@q8_0_109_surprisals.csv  llama-2-7b-chat@q8_0_10_surprisals.csv  llama-2-7b-chat@q8_0_110_surprisals.csv  llama-2-7b-chat@q8_0_111_surprisals.csv  llama-2-7b-chat@q8_0_112_surprisals.csv  llama-2-7b-chat@q8_0_113_surprisals.csv  llama-2-7b-chat@q8_0_114_surprisals.csv  llama-2-7b-chat@q8_0_115_surprisals.csv  llama-2-7b-chat@q8_0_116_surprisals.csv  llama-2-7b-chat@q8_0_117_surprisals.csv  llama-2-7b-chat@q8_0_118_surprisals.csv  (+777 more)
revised-scripts/token_analysis/: WildChat_consolidated_token_counts.csv  cnn_dailymail_consolidated_token_counts.csv  daily_dialog_consolidated_token_counts.csv  token_analysis_summary.csv  writingprompts_consolidated_token_counts.csv
revised-scripts/utils/: LLM.py  analyze_uid.py  spinner.py  uid_metrics.py  utils.py
(+35621 files in other folders)
