[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scrapy>=2.12.0",
    "selenium>=4.29.0",
    "torch>=2.6.0",
]
