[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "datasets>=3.3.2",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "peft>=0.15.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "scrapy>=2.12.0",
    "seaborn>=0.13.2",
    "selenium>=4.29.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
