[project]
name = "refactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "glob2>=0.7",
    "pandas>=2.2.3",
    "peft>=0.15.1",
    "torch>=2.6.0",
    "transformers>=4.51.2",
    "uv>=0.6.14",
]

[tool.uv.workspace]
members = ["notebooks"]
