[project]
name = "revised-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "hf-xet>=1.1.1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
